objects/Project_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName  &amp; &quot; &quot;  &amp; Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Email</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Project Team Members</relationshipLabel>
        <relationshipName>Project_Team_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Project__c</fullName>
        <label>Customer Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Customer Project Team Members</relationshipLabel>
        <relationshipName>Project_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only the Active Team Member will be able to access Project on Community.</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Super_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A Super User by default will get all the other permissions.</inlineHelpText>
        <label>Is Super User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manage_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Pic_URL__c</fullName>
        <label>Profile Pic URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Customer_Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_Case_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Case Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Certification_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Certification Report</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Project Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Customer_Project__c</columns>
        <columns>Is_Super_User__c</columns>
        <columns>IsActive__c</columns>
        <columns>Log_Case__c</columns>
        <columns>Manage_Team__c</columns>
        <columns>Profile_Pic_URL__c</columns>
        <columns>User__c</columns>
        <columns>View_Case_Report__c</columns>
        <columns>View_Certification_Report__c</columns>
        <columns>Project_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTM-{0000}</displayFormat>
        <label>Project Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Select_Only_Community_User_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(User__c)</errorConditionFormula>
        <errorMessage>Only Community User can be added as Project Team Member</errorMessage>
    </validationRules>
</CustomObject>